# parrot_arsdk

./: CMakeLists.txt
cmake/: arsdk-config.cmake.in  arsdk.cmake.in  arsdk.pc.in
script/: get_arch.py
